--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -116,10 +116,12 @@
             outline: none; /* Remove blue outline on mobile devices */
             margin: 0 20px; /* Add margin between icons */
            
+           
         }
 
         .full-site-nav .bloc-icon i {
             font-size: 22px; /* Adjust icon size */
+            max-width: 1000px;
             
         }
 
