--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -243,8 +243,8 @@
       <span>Reviews</span>
   </a>
   <a href="#" class="bloc-icon" onclick="changeColor(this)">
-      <i class="fas fa-star-half-alt"></i>
-      <span>Rating</span>
+    <i class="fa-regular fa-bell"></i>
+      <span>Notifications</span>
   </a>
   <a href="#" class="bloc-icon" onclick="changeColor(this)">
       <i class="fas fa-user"></i>
