--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -174,6 +174,39 @@
                 display: none; /* Hide full-site navbar on mobile */
             }
         }
+        .dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    top: 40px; /* Adjust this value to position the dropdown lower */
+    background-color: azure;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    padding: 12px 16px;
+    z-index: 1000; /* Set a high z-index value to ensure it's on top of other elements */
+}
+
+.dropdown-content a {
+    color: black; /* Set the link color */
+    padding: 8px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd; /* Add a background color on hover */
+}
+
+/* Ensuring dropdown content remains visible when hovered */
+.dropdown:hover .dropdown-content,
+.dropdown-content:hover {
+    display: block;
+}
+
     </style>
     {% block head %}
     {% endblock %}
@@ -209,9 +242,17 @@
                 <i class="fas fa-search"></i><span>Search</span>
             </a>
             {% if user.is_authenticated %}
-            <a href="#" class="bloc-icon profile" onclick="changeColor(this)">
-                <i class="fas fa-user"></i><span>Profile</span>
-            </a>
+            
+            <div class="dropdown">
+                <a href="#" class="bloc-icon profile" onclick="changeColor(this)">
+                    <i class="fas fa-user"></i><span>Profile</span>
+                </a>
+                <div class="dropdown-content">
+                    <a href="{% url 'logout_user' %}">Logout</a>
+                </div>
+            </div>
+            
+            </div>
             {% else %}
             <a href="{% url 'login_view' %}" class="bloc-icon profile" onclick="changeColor(this)">
                 <i class="fa-solid fa-right-to-bracket"></i><span>Login</span>
