--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -112,7 +112,7 @@
 
 {% block body %}
 <div class="header-news">
-  <h1>Welcome to the Gaming Blog</h1>
+  <h1>Welcome to the Gaming Blog Home</h1>
 </div>
 
 <div class="grid-container">
