--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -9,11 +9,23 @@
     margin: 0;
     padding: 0;
     padding-bottom: 60px;
+    padding-top: 67px;
   }
+  /* Adjust padding-top for larger screens */
+@media only screen and (min-width: 1200px) {
+  body {
+    padding-top: 67px; /* Adjusted value for larger screens */
+  }
+}
+@media only screen and (max-width: 600px) {
+  body {
+    padding-top: 0px; /* Adjusted value for smaller screens */
+  }
+}
 
   .header-news {
-    background-color: #333;
-    padding: 20px;
+    background: grey;
+    padding: 40px;
     text-align: center;
     margin-bottom: 20px;
   }
