--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -17,7 +17,14 @@
             padding: 0;
             font-family: 'Oxanium', sans-serif;
             background-color: #87CEEB; /* Sky blue background color */
+            
         }
+  
+        @media only screen and (max-width: 768px) {
+  body {
+    padding-bottom: 60px; /* Adjusted value for smaller screens */
+  }
+}
         .mobile-nav {
             background: #f2ecec; /* Dark background color */
             color: white; /* White text color */
