--- a/Blog/templates/Blog/news.html
+++ b/Blog/templates/Blog/news.html
@@ -22,6 +22,7 @@
 @media only screen and (max-width: 600px) {
   body {
     padding-top: 0px; /* Adjusted value for smaller screens */
+    padding-bottom: 60px;
   }
 }
 
