--- a/Blog/templates/Blog/add_article.html
+++ b/Blog/templates/Blog/add_article.html
@@ -14,12 +14,12 @@
             color: #fff;
         }
         hr {
-            max-width: 80%;
+            max-width: 350px;
             margin: 20px auto;
             border-color: #777;
         }
         .form-container {
-            max-width: 600px;
+            max-width: 800px;
             margin: 0 auto;
             padding: 20px;
             background-color: #333;
@@ -30,14 +30,13 @@
             display: block;
             margin-bottom: 10px;
             color: #fff;
-            font-weight: bold;
         }
         input[type="text"],
         input[type="email"],
         input[type="date"],
         select,
         textarea {
-            width: calc(100% - 22px); /* Adjust for padding and border */
+            width: 100%;
             padding: 10px;
             margin-bottom: 20px;
             border: 1px solid #555;
@@ -45,10 +44,6 @@
             box-sizing: border-box;
             background-color: #444;
             color: #ccc;
-            font-size: 16px;
-        }
-        textarea {
-            resize: vertical; /* Allow vertical resizing */
         }
         .form-group {
             margin-bottom: 20px;
@@ -69,7 +64,6 @@
             background-color: #ff1493;
         }
     </style>
-    <script src="https://cdn.ckeditor.com/ckeditor5/41.4.2/classic/ckeditor.js"></script>
 {% endblock %}
 
 {% block body %}
@@ -79,67 +73,13 @@
     <div class="form-container">
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            <div class="form-group">
-                <label for="id_title">Title:</label>
-                {{ form.title }}
-            </div>
-            <div class="form-group">
-                <label for="id_subtitle">Subtitle:</label>
-                {{ form.subtitle }}
-            </div>
-            <div class="form-group">
-                <label for="id_author">Author:</label>
-                {{ form.author }}
-            </div>
-            <div class="form-group">
-                <label for="id_platforms">Platforms:</label>
-                {{ form.platforms }}
-            </div>
-            <div class="form-group">
-                <label for="id_date_posted">Date Posted:</label>
-                {{ form.date_posted }}
-            </div>
-            <div class="form-group">
-                <label for="id_picture">Picture:</label>
-                {{ form.picture }}
-            </div>
-            <div class="form-group">
-                <label for="id_content">Content:</label>
-                {{ form.content }}
-            </div>
-            <div class="form-group">
-                <label for="id_tag">Tag:</label>
-                {{ form.tag }}
-            </div>
+            {{ form.as_p }}
+            {{ form.media }}
+           
             
             <button type="submit" class="submit-btn">Post</button>
         </form>
     </div>
 
-    <script>
-        ClassicEditor
-            .create(document.querySelector('#id_content'), {
-                toolbar: [
-                    'heading', '|', 'bold', 'italic', 'link', 'bulletedList', 'numberedList', 'blockQuote', 
-                    'insertTable', 'tableColumn', 'tableRow', 'mergeTableCells', 
-                    'mediaEmbed', 'undo', 'redo', 'imageUpload', 'ckfinder'
-                ],
-                ckfinder: {
-                    uploadUrl: '/upload/'  // URL to your upload endpoint
-                },
-                image: {
-                    toolbar: [
-                        'imageTextAlternative', 'imageStyle:full', 'imageStyle:side'
-                    ]
-                },
-                table: {
-                    contentToolbar: [
-                        'tableColumn', 'tableRow', 'mergeTableCells'
-                    ]
-                }
-            })
-            .catch(error => {
-                console.error(error);
-            });
-    </script>
+  
 {% endblock %}
