--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -217,7 +217,7 @@
             <a href="{% url 'news' %}" class="bloc-icon" onclick="changeColor(this)">
                 <i class="fas fa-newspaper"></i><span>News</span>
             </a>
-            <a href="#" class="bloc-icon" onclick="changeColor(this)">
+            <a href="{% url 'reviews' %}" class="bloc-icon" onclick="changeColor(this)">
                 <i class="fas fa-star"></i><span>Reviews</span>
             </a>
             <a href="#" class="bloc-icon" onclick="changeColor(this)">
