--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -310,7 +310,7 @@
             <a href="{% url 'login_view' %}" class="bloc-icon profile" onclick="changeColor(this)">
                 <i class="fa-solid fa-right-to-bracket"></i><span>Login</span>
             </a>
-            <a href="{% url 'register_view' %}" class="bloc-icon profile" onclick="changeColor(this)">
+            <a href="" class="bloc-icon profile" onclick="changeColor(this)">
                 <i class="fa-solid fa-user-plus"></i><span>Register</span>
             </a>
             {% endif %}
