--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -303,6 +303,7 @@
                 <div class="dropdown-content">
                     <a href="">Profile</a>
                     <a href="">Settings</a>
+                    <a href="{% url 'add_article' %}">Add Article</a>
                     <a href="">Logout</a>
                 </div>
             </div>
