--- a/Blog/templates/Blog/article_view.html
+++ b/Blog/templates/Blog/article_view.html
@@ -227,10 +227,16 @@
     </div>
   </div>
 
+  
   <div class="comments">
-    <h2>Comments</h2>
+    <h2>Comments</h2> 
+
+    {% include 'Blog/comment.html' %}
    
+  
+
   </div>
+  
   
   <aside class="aside">
     <div class="aside-box">
@@ -247,6 +253,7 @@
     </div>
     <div class="aside-box">
       <h3>Top Games</h3>
+      
       <!-- Add top games here -->
     </div>
   </aside>
