--- a/Blog/templates/Blog/comment.html
+++ b/Blog/templates/Blog/comment.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <style>
     .comment-section {
-        background-color: #f9f9f9;
+        background-color: #2b2b2b;
         padding: 20px;
         border-radius: 8px;
         max-height: 400px; 
@@ -10,6 +10,7 @@
     }
 
     .comment {
+        background-color: #f9f9f9;
         margin-bottom: 20px;
         border: 1px solid #ccc;
         border-radius: 8px;
