--- a/Blog/templates/Blog/xbox_view.html
+++ b/Blog/templates/Blog/xbox_view.html
@@ -8,7 +8,7 @@
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    padding-top: 67px;
+    padding-top: 60px;
 
 
   }
@@ -25,6 +25,7 @@
     padding-bottom: 60px;
   }
 }
+
 
 
   .grid-container {
@@ -62,7 +63,6 @@
     object-fit: cover; /* Scale the image while maintaining aspect ratio */
     display: block;
     border-radius: 8px 8px 0 0;
-    
 }
 
   .tag {
@@ -165,7 +165,7 @@
 
  
 <div class="header-news">
-  <h1>Game Bits Reviews</h1>
+  <h1>Xbox Games</h1>
 </div>
 
 
