--- a/Blog/templates/Blog/guides.html
+++ b/Blog/templates/Blog/guides.html
@@ -8,7 +8,7 @@
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    padding-top: 67px;
+    padding-top: 60px;
 
 
   }
@@ -25,7 +25,6 @@
     padding-bottom: 60px;
   }
 }
-
 
   .grid-container {
     display: grid;
@@ -62,7 +61,6 @@
     object-fit: cover; /* Scale the image while maintaining aspect ratio */
     display: block;
     border-radius: 8px 8px 0 0;
-    
 }
 
   .tag {
@@ -165,7 +163,7 @@
 
  
 <div class="header-news">
-  <h1>Game Bits Reviews</h1>
+  <h1>Game Bits Guide</h1>
 </div>
 
 
