--- a/Blog/templates/Blog/layout.html
+++ b/Blog/templates/Blog/layout.html
@@ -234,16 +234,17 @@
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
-    text-decoration: none;
+    text-decoration: none !important;
     display: block;
 }
 
 .dropdown-content a:hover {
-    background-color: #f1f1f1;
+    background-color: #f1f1f1 !important;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
+    
 }
 
 /* Ensure profile link stays in place and doesn't affect the dropdown */
@@ -264,7 +265,19 @@
         display: none; /* Hide full-site navbar on mobile */
     }
 }
+.header-news {
+    background-color:#ff1493;
+    padding: 30px;
+    text-align: center;
+    margin-bottom: 10px;
+    color:#f2ecec;  
+    
+  }
 
+  .header-news h1 {
+    font-size: 28px;
+    margin: 0;
+  }
     </style>
     {% block head %}
     {% endblock %}
@@ -281,19 +294,22 @@
             <a href="{% url 'reviews' %}" class="bloc-icon" onclick="changeColor(this)">
                 <i class="fas fa-star"></i><span>Reviews</span>
             </a>
-            <a href="#" class="bloc-icon" onclick="changeColor(this)">
-                <i class="fas fa-star-half-alt"></i><span>Rating</span>
+            <a href="{% url 'guides' %}" class="bloc-icon" onclick="changeColor(this)">
+                <i class="fa-solid fa-book"></i><span>Guide</span>
             </a>
-            <a href="#" class="bloc-icon" onclick="changeColor(this)">
+            <a href="{% url 'game_view' %}" class="bloc-icon" onclick="changeColor(this)">
+                <i class="fa-solid fa-trophy"></i><span>Top Games</span>
+            </a>
+            <a href="{% url 'pc_view' %}" class="bloc-icon" onclick="changeColor(this)">
                 <i class="fa-solid fa-desktop"></i><span>PC</span>
             </a>
-            <a href="#" class="bloc-icon" onclick="changeColor(this)">
+            <a href="{% url 'playstation_view' %}" class="bloc-icon" onclick="changeColor(this)">
                 <i class="fa-brands fa-playstation"></i><span>Playstation</span>
             </a>
-            <a href="#" class="bloc-icon" onclick="changeColor(this)">
+            <a href="{% url 'xbox_view' %}" class="bloc-icon" onclick="changeColor(this)">
                 <i class="fa-brands fa-xbox"></i><span>Xbox</span>
             </a>
-            <a href="#" class="bloc-icon" onclick="changeColor(this)">
+            <a href="{% url 'nintendo_view' %}" class="bloc-icon" onclick="changeColor(this)">
                 <i class="fa-solid fa-gamepad"></i><span>Switch</span>
             </a>
             <a href="#" class="bloc-icon" onclick="toggleSearch()">
@@ -309,6 +325,7 @@
                     <a href="">Profile</a>
                     <a href="">Settings</a>
                     <a href="{% url 'add_article' %}">Add Article</a>
+                    <a href="{% url 'add_game' %}">Add Game</a>
                     <a href="{% url 'logout_user' %}">Logout</a>
                 </div>
             </div>
