--- a/Blog/templates/Blog/pc_view.html
+++ b/Blog/templates/Blog/pc_view.html
@@ -8,19 +8,25 @@
     line-height: 1.6;
     margin: 0;
     padding: 0;
+    padding-top: 60px;
+
+
   }
 
-  .header-news {
-    background-color: #333;
-    padding: 20px;
-    text-align: center;
-    margin-bottom: 20px;
+/* Adjust padding-top for larger screens */
+@media only screen and (min-width: 1200px) {
+  body {
+    padding-top: 66px; /* Adjusted value for larger screens */
   }
+}
+@media only screen and (max-width: 600px) {
+  body {
+    padding-top: 0px; /* Adjusted value for smaller screens */
+    padding-bottom: 60px;
+  }
+}
 
-  .header-news h1 {
-    font-size: 28px;
-    margin: 0;
-  }
+
 
   .grid-container {
     display: grid;
@@ -53,10 +59,11 @@
 
   .article img {
     width: 100%;
-    height: auto;
+    height: 270px; /* Set a fixed height for the image */
+    object-fit: cover; /* Scale the image while maintaining aspect ratio */
     display: block;
     border-radius: 8px 8px 0 0;
-  }
+}
 
   .tag {
     position: absolute;
@@ -141,18 +148,32 @@
   .ad-space.side {
     grid-row: span 2;
   }
+  a {
+    text-decoration: none;
+    color: #fff; /* Set link color */
+  }
+
+  /* Hover effect for links */
+  a:hover {
+    text-decoration: underline;
+    color: #ff1493; /* Change color on hover */
+  }
 </style>
 {% endblock %}
 
 {% block body %}
+
+ 
+<div class="header-news">
+  <h1>Pc Games</h1>
+</div>
+
+
 <div class="ad-space top">
   <!-- Top ad -->
   <p>Top Ad</p>
 </div>
 
-<div class="header-news">
-  <h1>Game Bits Latest</h1>
-</div>
 
 <div class="grid-container">
   <div class="left-column">
@@ -161,7 +182,7 @@
       <span class="tag">{{ article.tag }}</span>
       <img src="{{ article.picture.url }}" alt="{{ article.title }}">
       <div class="article-content">
-        <h2 class="article-title">{{ article.title }}</h2>
+        <h2 class="article-title"><a href="{% url 'article_view' pk=article.pk %}">{{ article.title }}</a></h2>
         <p class="author-info">By {{ article.author }} | {{ article.date_posted }}</p>
         <p class="platforms">Platforms: 
           {% for platform in article.platforms.all %}
@@ -216,6 +237,7 @@
     </div>
   </div>
 </div>
+
 <div class="ad-space bottom">
   <!-- Bottom ad -->
   <p>Bottom Ad</p>
